<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CollarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/Theme.CollaRGB"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/collar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="?android:attr/actionBarSize"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/modern_sans"
            android:gravity="center"
            tools:ignore="SpUsage" />

    </androidx.appcompat.widget.Toolbar>

    <!-- TODO: Collar drawable with spike/smd icons -->
    <ImageView
        android:id="@+id/collar_iv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/colorSelectorHS_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/color_select_hs"
        app:layout_constraintBottom_toTopOf="@+id/collarOneColor_switch"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/collar_iv"
        app:layout_constraintStart_toStartOf="@+id/collar_iv"
        app:layout_constraintTop_toBottomOf="@+id/collar_iv" />

    <ImageView
        android:id="@+id/colorSelectorHS_alpha_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/colorSelectorHS_iv"
        app:layout_constraintEnd_toEndOf="@+id/colorSelectorHS_iv"
        app:layout_constraintStart_toStartOf="@+id/colorSelectorHS_iv"
        app:layout_constraintTop_toTopOf="@+id/colorSelectorHS_iv" />

    <SeekBar
        android:id="@+id/colorSelectorV_sb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:rotation="270"
        android:progress="100"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        app:layout_constraintTop_toTopOf="@+id/colorSelectorHS_iv"
        app:layout_constraintBottom_toBottomOf="@+id/colorSelectorHS_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/colorSelectorHS_iv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/_100"

        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@+id/colorSelectorHS_iv"
        app:layout_constraintTop_toTopOf="@+id/colorSelectorHS_iv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/off"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/colorSelectorHS_iv"
        app:layout_constraintBottom_toBottomOf="@+id/colorSelectorHS_iv" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/collarOneColor_switch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:gravity="center"
        android:showText="true"
        android:textColor="@color/black"
        android:textOff="OFF"
        android:textOn="ON"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:track="@drawable/switch_track" />

    <TextView
        android:id="@+id/collarOneColor_single_tv"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/single"
        android:fontFamily="sans-serif-light"
        app:layout_constraintStart_toStartOf="@+id/collarOneColor_switch"
        app:layout_constraintTop_toTopOf="@+id/collarOneColor_switch"
        app:layout_constraintBottom_toBottomOf="@+id/collarOneColor_switch" />

    <TextView
        android:id="@+id/collarOneColor_perLed_tv"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/per_led"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="@+id/collarOneColor_switch"
        app:layout_constraintTop_toTopOf="@+id/collarOneColor_switch"
        app:layout_constraintBottom_toBottomOf="@+id/collarOneColor_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>